# PostgreSQL_coursework

./: .gitignore  README.md  config.py  database.ini  main.py  pyproject.toml
src/: DBManager.py  api_hh.py  database.py
