[tool.poetry]
name = "postgresql-coursework"
version = "0.1.0"
description = ""
authors = ["kirill_tarasov <kirilltaras1792@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

